Small changes to conform with future Java deprecations, mostly involving the removal of explicit constructors for Integer, Double, Boolean, etc.